<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAF4"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_horizontal">

        <!-- Картинка -->
        <ImageView
            android:id="@+id/imageOnboarding"
            android:layout_width="343dp"
            android:layout_height="350dp"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/onboarding_image_desc"
            android:src="@drawable/onboarding_1" />

        <!-- Индикаторы свайпа -->
        <LinearLayout
            android:id="@+id/indicatorContainer"
            android:layout_width="343dp"
            android:layout_height="14dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="8dp">

            <View
                android:layout_width="12dp"
                android:layout_height="6dp"
                android:background="@drawable/indicator_active"
                android:layout_marginEnd="6dp" />

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:background="@drawable/indicator_inactive"
                android:layout_marginEnd="6dp" />

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:background="@drawable/indicator_inactive" />
        </LinearLayout>

        <!-- Тексты -->
        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="178dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/titleOnboarding"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/onboarding_title"
                android:textColor="#432C81"
                android:textSize="32sp"
                android:letterSpacing="-0.03125"
                android:fontFamily="@font/raleway_bold"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/descriptionOnboarding"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:text="@string/onboarding_description"
                android:textColor="#82799D"
                android:textSize="16sp"
                android:lineSpacingExtra="10dp"
                android:letterSpacing="-0.03125"
                android:fontFamily="@font/raleway_bold"
                android:textAlignment="center"
                android:gravity="center" />
        </LinearLayout>

        <!-- Кнопка пропуска -->
        <TextView
            android:id="@+id/skipTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_tour"
            android:textColor="#432C81"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/raleway_bold"
            android:layout_marginBottom="24dp" />

    </LinearLayout>

</ScrollView>
